# chef-genius-ai

./: .env.example  .env.training.example  .gitignore  .pre-commit-config.yaml  AI_MODEL_API_SPEC.md  ANALYSIS_INDEX.md  API_SPECIFICATION.md  CHECKPOINT_ANALYSIS.md  CHECKPOINT_FIXES_README.md  CHECKPOINT_FIX_GUIDE.md  CHECKPOINT_QUICK_REFERENCE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DOCKER_COMPOSE_QUICKSTART.md  DOCKER_TRAINING_SUMMARY.md  Dockerfile.training  Dockerfile.training_v2  ERRORS_FIXED.md  FINAL_OOM_FIX.md  IMPLEMENTATION_SUMMARY.md  Implementation_Roadmap.md  LICENSE  MCP_Implementation_Guide.md  MEMORY_FIX_COMPLETE.md  ML_Production_Monitoring_Guide.md  Makefile  Makefile.mcp  OOM_FIX_README.md  OOM_FIX_SUMMARY.txt  PUBLIC_RELEASE_SUMMARY.md  QUICKSTART_OOM_FIX.md  QUICK_START_V2.md  RAG_MCP_Architecture.md  README-Windows.md  README.md  README_DEMO.md  RTX_5090_OPTIMIZATIONS.md  SECURITY_CHECKLIST.md  TRAINING_INSTABILITY_FIXED.md  TRAINING_READY.md  (+38 more)
api-server/: Dockerfile  Makefile  Makefile.windows  README.md  go.mod  main.go  pool.go  tensorrt.go
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/api/endpoints/: chef_assistant.py  drift_monitoring.py  health.py  meal_plans.py  performance.py  recipes.py  rust_performance.py  substitutions.py  tools.py  vision.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  middleware.py
backend/app/services/: drift_monitoring.py  enhanced_rag_system.py  health_monitor.py  mcp_client.py  meal_planner.py  multimodal_service.py  nutrition_analyzer.py  performance_optimizer.py  rag_system.py  recipe_generator.py  recipe_generator_helper.py  rust_integration.py  substitution_engine.py  tool_system.py  vision_service.py  vision_service_production.py  weave_chef_assistant.py
chef_genius_core/: Cargo.toml  README.md  pyproject.toml
chef_genius_core/src/: dataset_transformer.rs  drift_detection.rs  inference.rs  lib.rs  models.rs  nutrition.rs  recipe_processor.rs  simple_tokenizer.rs  utils.rs  vector_search.rs
cli/: CLEAN_TRAINING_PIPELINE_SUMMARY.md  DATA_PIPELINE_README.md  HOW_TO_USE_CHECKPOINTS.md  IMPROVEMENTS_SUMMARY.md  MIGRATION_GUIDE.md  QUICK_START_GUIDE.md  README.md  README_updated.md  RECIPE_GENERATOR_README.md  TRAINING_MONITOR_README.md  TRAINING_V2_README.md  auto_process_datasets.py  base_recipe_generator.py  batch_validate_all_datasets.sh  catastrophic_forgetting_prevention.py  clean_recipe_datasets.py  cleanup_old_tokenizers.py  compare_models.py  compare_v1_v2.py  complete_metrics_training.py  complete_optimized_training.py  complete_optimized_training_v2.py  comprehensive_checkpoint_tester.py  consumer_end_user_tokenizer.py  convert_all_cleaned_to_flan_t5.sh  convert_cleaned_to_flan_t5.py  convert_data_for_mistral.py  convert_food101_to_yolo.py  csv_to_training_parser.py  dataloader_integration.py  dataset_audit_report.md  dataset_transformer.py  discord_notifier.py  dual_mode_tokenizer.py  dual_tokenizer_manager.py  enterprise_b2b_corpus.txt  enterprise_b2b_tokenizer.py  enterprise_recipe_tokenizer.py  example_prompts.yaml  fast_dataloader.py  (+49 more)
cli/configs/: default_config.yaml  fast_iteration_config.yaml  lora_config.yaml
cli/consumer_end_user_tokenizer/: consumer_config.json  tokenizer.json  tokenizer_config.json
cli/csv_to_database/: .gitignore  Cargo.toml
cli/csv_to_database/src/: csv.rs  db.rs  main.rs
cli/enterprise_b2b_tokenizer/: enterprise_config.json  tokenizer.json  tokenizer_config.json
cli/mlruns/0/: meta.yaml
cli/mlruns/0/07030121b25c49a590c866751c1d1b62/: meta.yaml
cli/mlruns/0/07030121b25c49a590c866751c1d1b62/params/: logging_dir
cli/mlruns/0/26d56d4ccac64e19baf15501b08ee961/: meta.yaml
cli/mlruns/0/26d56d4ccac64e19baf15501b08ee961/params/: logging_dir
cli/mlruns/0/32e931eb38e64a088efb8ae91d8b8e5c/: meta.yaml
cli/mlruns/0/32e931eb38e64a088efb8ae91d8b8e5c/metrics/: epoch  total_flos  train_loss  train_runtime  (+2 more)
cli/mlruns/0/764bda6175684257a327b7008439ddd0/: meta.yaml
cli/mlruns/0/a3d04fa302764d3b81aaf922db9e7984/: meta.yaml
cli/mlruns/0/c60c5ac21ea54af18a67484a6a2ef3b6/: meta.yaml
cli/mlruns/0/d16f5660bd8a487ebb01f4dffc9d9075/: meta.yaml
cli/mlruns/0/de9fdc94519d4100bf5a5351be26e13f/: meta.yaml
cli/mlruns/0/e17edfbd5b754e25b1f21f16b8c97f81/: meta.yaml
cli/mlruns/0/e330dbaf408f43358d6e25d620ca0627/: meta.yaml
cli/recipe_cleaner/: Cargo.toml  README.md  build_and_clean.sh
cli/recipe_cleaner/src/: main.rs  validate_clean.rs
cli/recipe_data_validator/: Cargo.toml  test_junk.csv
cli/recipe_data_validator/src/: jsonl_converter.rs  main.rs
cli/rust_dataloader/: Cargo.toml  pyproject.toml
cli/rust_dataloader/src/: lib.rs
cli/training/: __init__.py  callbacks.py  checkpoint_utils.py  config.py  data_manager.py  lora_utils.py  metrics.py  modular_trainer.py
docs/: API.md
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/home/: CTA.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  Testimonials.tsx
frontend/src/components/layout/: Footer.tsx  Navbar.tsx
mcp_servers/: requirements.txt
mcp_servers/knowledge_server/: main.py
mcp_servers/recipe_server/: Dockerfile  main.py  requirements.txt
mcp_servers/tool_server/: main.py
mobile_demo/: README.md  pubspec.yaml
mobile_demo/android/app/: build.gradle
mobile_demo/ios/Runner.xcodeproj/: project.pbxproj
mobile_demo/lib/: main.dart
mobile_demo/lib/screens/: chef_chat_screen.dart  fridge_scan_screen.dart  home_screen.dart  recipe_generator_screen.dart  vision_analyzer_screen.dart
mobile_demo/lib/services/: api_service.dart
mobile_demo/lib/widgets/: loading_animation.dart  recipe_card.dart
mobile_demo/macos/Runner.xcodeproj/: project.pbxproj
mobile_demo/macos/Runner/Configs/: AppInfo.xcconfig
monitoring/: prometheus.yml
monitoring/grafana-dashboards/: chef-genius-dashboard.json
src/: config.rs  error.rs  inference.rs  main.rs  models.rs  monitoring.rs  tensorrt.rs  training.rs
(+32 files in other folders)
