[package]
name = "chef_genius_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "chef_genius_core"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Text processing
regex = "1.10"

# Utilities
num_cpus = "1.0"

# Concurrency
rayon = "1.8"

# Random number generation
rand = "0.8"

# Optional features
[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"