[package]
name = "recipe_cleaner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "recipe_cleaner"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"
csv = "1.3"
rayon = "1.8"
regex = "1.10"
lazy_static = "1.4"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
ahash = "0.8"
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
