[package]
name = "recipe_data_validator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "validate_recipes"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
rayon = "1.7"
regex = "1.10"
indexmap = "2.0"
sha2 = "0.10"
indicatif = "0.17"
comfy-table = "7.0"