[package]
name = "chef_genius_dataloader"
version = "0.1.0"
edition = "2021"

[lib]
name = "chef_genius_dataloader"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"
csv = "1.3"
rayon = "1.8"
anyhow = "1.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"